--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     </div>
                 </div>
             </div>
+            <div id="timer"class="row">Time Left</div>
         </div>
     </div>
         <script src="assets/javascript/app.js"></script> <!-- Connected USER javascript file -->
