javascript mostly working without a reset button or a starter screen, no css yet

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                     <div id='answers-build'>
                     <p>Good Luck !!</p>
                     <p class="lead"> </p>
-                    <button id="bt1">Choice A</button>
+                    <button id="bt1" onclick="button1Ass()">Choice A</button>
     
-                    <button id="bt2">Choice b</button>
+                    <button id="bt2" onclick="button2Ass()">Choice b</button>
                     <br>
-                    <button id="bt3">Choice c</button>
+                    <button id="bt3" onclick="button3Ass()">Choice c</button>
     
-                    <button id="bt4">Choice d</button>
+                    <button id="bt4" onclick="button4Ass()">Choice d</button>
                     <br>
                     <a class="btn btn-primary btn-lg" href="#" role="button">Yay!!</a>
                     </div>
